# py-enum-tt

./: README.md  pyproject.toml
src/py_enum_tt/: __init__.py
src/tests/: test_py_enum.py
