[project]
name = "py-enum-tt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "YOSHITAKA matsumot", email = "yo4taka.ma2moto@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py_enum_tt"]
